# neu-hpc-for-ai

./: .gitignore
week_01/: README.md  a.out  multi-threaded.c  single-threaded.c
week_02/: README.md  gemm.cu  gemm.exp
week_02/read_checkpoint/: CheckpointIO.java  TestReader.java  run.c
week_03/: gemm.cu  gemm.exp  gemm.lib  online_normalizer_softmax.cu  ons.exp  ons.lib
week_04/: attention.cpp  fa.exp  fa.lib  flash_attention.c  flash_attention.cu  gpu.exp  gpu.lib  gpu.txt  readme.md  runner.py
week_04/src/: flash_attention.cu
week_05/: README.MD  attention.cpp  cpu.txt  cpu_bwd.cpp  fa2_bwd.cu  fa2_fwd.cu  fa2_test.exp  fa2_test.lib  fwd.exp  fwd.lib  gpu.txt  gpu_bwd.exp  gpu_bwd.lib  test.cu
week_07/: log.txt  readme.md  runner.py
week_07/cuda_src/: 00_mpi_minimal.c  fa2_fwd.cu  fa2_fwd_mp.cu  mpi_test.cu
week_08/: main_moe.cpp  moe_fwd.cpp  runner.py
week_08/comm/: ep_alltoallv_mpi.cc  ep_alltoallv_nccl.cu  ep_comm.h
week_08/router/: apply_group_mask.cu  router_fwd.cpp
week_08/tools/: make_nccl_id.cpp
week_08/utils/: bias_add.cu  sigmoid.cu
week_11/: Dockerfile  fmrunner.py  runner.py
week_11/dsmoe/: CMakeLists.txt  env_probe.py  main_moe.cpp  moe_fwd.cpp  moe_fwd.h  runner.py
week_11/dsmoe/combine/: combine_and_add.cu
week_11/dsmoe/comm/: ep_alltoallv_mpi.cc  ep_alltoallv_nccl.cc  ep_alltoallv_stub.cc
week_11/dsmoe/dispatch/: pack_routes.cu
week_11/dsmoe/experts/: experts_mlp_fwd.cu
week_11/dsmoe/python/: ds_hf.py  modeling_deepseek_v3.py
week_11/dsmoe/router/: gather_alpha.cu  group_top2_select.cu  row_topk.cu
week_11/dsmoe/se/: se_mlp_fwd.cu
week_11/dsmoe/utils/: gemm.cu
week_11/flashmoe/: CITATION.cff  LICENSE  README.md
week_11/flashmoe/csrc/: CMakeLists.txt  correctness.cuh  eval.cuh  kleos_config.json  kleos_config.schema.json  main.cu
week_11/flashmoe/csrc/cmake/: SM.cmake  sm.cu
week_11/flashmoe/csrc/include/kleos/: arch.cuh  atomics.cuh  bootstrap.cuh  debug.cuh  indexing.cuh  kleos.cuh  telemetry.cuh  throughput.cuh  topo.cuh  types.cuh
week_11/flashmoe/csrc/include/kleos/moe/: expert.cuh  fffn.cuh  gate.cuh  moe.cuh
week_11/flashmoe/csrc/include/kleos/os/: os.cuh  packet.cuh  scheduler.cuh  subscriber.cuh
week_11/flashmoe/csrc/include/kleos/os/decider/: decider.cuh
week_11/flashmoe/csrc/include/kleos/os/decider/comps/: args.cuh  edge.cuh  expert.cuh  functions.cuh  group.cuh  niche.cuh  worker.cuh
week_11/flashmoe/csrc/include/kleos/os/processor/: gemm.cuh  mmaConfig.cuh  processor.cuh
